--- a/cover.html
+++ b/cover.html
@@ -5,18 +5,23 @@
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
   <link rel="stylesheet" href="cover.css">
   <title>Cover</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
 </head>
 <body>
-<div class="all" id="todo">
+<div class="all" id="all">
   <div class="face" id="back" onclick="showBlock(this)" data-dst="back-tab">
+    <canvas></canvas>
   </div>
   <div class="center" id="title" onclick="showBlock(this)" data-dst="center-tab"
 	style="width: 20mm;">
     Title of the book
   </div>
   <div class="face" id="front" onclick="showBlock(this)" data-dst="front-tab">
+    <canvas id="source"></canvas>
   </div>
 </div>
+
 <div class="data">
 <fieldset class="col measure" id="back-tab">
 <legend class="f4 ph1">Back</legend>
@@ -77,8 +82,22 @@
 <div><label class="db fw6 lh-copy f6" for="back_file"> Width</label>
 <input type="text" value="100mm" onchange="changeAttribute(this)" data-dst="front" data-attr="width"/></div>
 <div><label class="db fw6 lh-copy f6" for="back_file"> Height</label>
-<input type="text" value="131mm" onchange="changeAttribute(this)" data-dst="todo" data-attr="height"/></div>
+<input type="text" value="131mm" onchange="changeAttribute(this)" data-dst="all" data-attr="height"/></div>
 </fieldset>
+</div>
+
+<div id="info" style="display: none">
+  <div id="hover" class="color-info">
+    <div id="color-hover" class="color-preview"></div>
+    hovering<br>
+    <label for="rgb-hover">rgb</label> <input type="text" size="11" id="rgb-hover" name="rgb-hover"><br>
+    <label for="hex-hover">hex</label> <input type="text" size="11" id="hex-hover" name="hex-hover">
+  </div>
+  <div id="zoomer">
+    <div id="coord"></div>
+    <canvas id="zoomed"></canvas>
+    <canvas id="crosshair" width="11px" height="11px"></canvas>
+  </div>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
@@ -87,6 +106,8 @@
 var back  = document.getElementById('back');
 var title = document.getElementById('title');
 var front = document.getElementById('front');
+// var canvas = document.getElementById('source');
+// var ctx = canvas.getContext('2d');
 
 // handle file selection. Update image
 function handleFileSelect(tgt) {
@@ -103,9 +124,14 @@ function handleFileSelect(tgt) {
     // Closure to capture the file information.
     reader.onload = (function(theFile) {
       return function(e) {
-        var span = document.getElementById(dst);
-        span.innerHTML = ['<img src="', e.target.result,
-                          '" title="', escape(theFile.name), '"/>'].join('');
+        let img = new Image();
+	img.src = e.target.result;
+	img.title =  escape(theFile.name);
+        // document.getElementById(dst).appendChild(img);
+        let c = document.getElementById(dst).getElementsByTagName("canvas")[0];
+	c.width = img.width;
+        c.height = img.height;
+        c.getContext('2d').drawImage(img, 0, 0);
       };
     })(f);
     reader.readAsDataURL(f);
@@ -161,6 +187,68 @@ function showBlock(tgt) {
 }
 
 // “Update details” button opens the <dialog> modally
+  function createImage(source) {
+    var img = new Image()
+    img.onload = function() {
+      $('#info').show().mouseleave(function() {
+        $(this).find('input').blur()
+      })
+
+      var zoomed = document.getElementById('zoomed');
+      var ztx = zoomed.getContext('2d');
+      var zoom = 3;
+
+      zoomed.width = img.width * zoom
+      zoomed.height = img.height * zoom
+      ztx.imageSmoothingEnabled = false
+      ztx.mozImageSmoothingEnabled = false
+      ztx.webkitImageSmoothingEnabled = false
+      ztx.drawImage(img, 0, 0, zoomed.width, zoomed.height)
+
+      var canvas = document.getElementById('source');
+      var ctx = canvas.getContext('2d');
+
+      canvas.width = img.width
+      canvas.height = img.height
+      ctx.drawImage(img, 0, 0)
+
+      $('#board').show()
+
+      $(canvas)
+      .mousemove(function(e) {
+        var x = e.pageX
+          , y = e.pageY
+          , d = ctx.getImageData(x, y, 1, 1).data
+          , r = d[0]
+          , g = d[1]
+          , b = d[2]
+          , ir = 255 - r
+          , ig = 255 - g
+          , ib = 255 - b
+          , hex = rgbToHex(r, g, b)
+          , inv = rgbToHex(ir, ig, ib)
+
+        $('#coord').html(x + ' x ' + y).css('color', inv)
+        $('#hex-hover').val(hex)
+        $('#rgb-hover').val(r + ',' + g + ',' + b)
+        $('#color-hover').css('background', hex)
+
+        $('#zoomed')
+        .css('left', -(zoom * x) + ($('#zoomer').width() - 3) / 2)
+        .css('top', -(zoom * y) + ($('#zoomer').height() - 3) / 2)
+
+        drawCrosshair(ir, ig, ib)
+      })
+      .contextmenu(function() {
+        $('#rgb-saved').val($('#rgb-hover').val())
+        $('#hex-saved').val($('#hex-hover').val())
+        $('#color-saved').css('background', $('#hex-hover').val())
+        return false
+      })
+    }
+    img.src = source
+  }
+
 </script>
 </body>
 </html>
